--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Like lang</strong></h4>
+                        <h4><strong>Like Us</strong></h4>
                         <p class="text-faded mb-0">
-                            Bakit? wala ka namang jowa eh
+                            for more about info
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
