--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Zhai's Website</h1>
-                <h3 class="mb-5"><em>Grind Grind Grind!</em></h3>
+                <h1 class="mb-1">Langga?? I love youuu mwah mwwaah</h1>
+                <h3 class="mb-5"><em>Future asawa ko si Shaikha Rasees Enerio</em></h3>
             </div>
         </header>
         <!-- About-->
@@ -41,9 +41,9 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>"Do not lose hope, nor be sad"</h2>
+                        <h2>"diba may wish kna yung 12 anak? sure y not?"</h2>
                         <p class="lead mb-5">
-                            - Qu'ran 3:139
+                            Iloveyouuuuuuu
                         </p>
                     </div>
                 </div>
