--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
                         <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">Tanongin mo kay mamon</p>
+                        <p class="text-faded mb-0">Tanongin mo kay langga ko</p>
                     </div>
                 </div>
             </div>
